[workspace]
members = [".", "gen/bluefin_api"]

[dependencies]
base64 = "0.22.1"
bcs = "0.1.6"
blake2 = "0.10.6"
chrono = "0.4.40"
hex = "0.4.3"
serde_json = "1.0.140"
sha2 = "0.10.8"

[dependencies.bluefin_api]
path = "gen/bluefin_api"
version = "1.5.0"

[dependencies.ed25519-dalek]
features = ["rand_core"]
version = "2.1.1"

[dependencies.reqwest]
features = ["rustls-tls"]
version = "0.12.19"

[dependencies.secp256k1]
features = [
    "global-context",
    "rand",
    "recovery",
]
version = "0.30.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.219"

[dependencies.sui-crypto]
features = [
    "ed25519",
    "secp256k1",
]
version = "0.0.4"

[dependencies.sui-sdk-types]
features = [
    "serde",
    "hash",
]
version = "0.0.4"

[dev-dependencies]
futures-util = "0.3.31"
rand = "0.8.5"

[dev-dependencies.tokio]
features = ["full"]
version = "1.44.2"

[dev-dependencies.tokio-tungstenite]
features = ["native-tls"]
version = "0.24.0"

[package]
categories = [
    "api-bindings",
    "authentication",
    "cryptography::cryptocurrencies",
    "finance",
]
description = "Software Development Kit for Bluefin Pro"
edition = "2024"
homepage = "https://bluefin.io/"
keywords = [
    "blue",
    "bluefin",
    "sui",
]
license = "Unlicense"
name = "bluefin-pro"
repository = "https://github.com/fireflyprotocol/pro-sdk"
version = "1.5.0"
