[dependencies]
base64 = "0.22.1"
bcs = "0.1.6"
blake2 = "0.10.6"
chrono = "0.4.44"
hex = "0.4.3"
serde_json = "1.0.149"
sha2 = "0.10.9"

[dependencies.bluefin_api]
path = "gen/bluefin_api"
version = "1.13.0"

[dependencies.ed25519-dalek]
features = ["rand_core"]
version = "2.2.0"

[dependencies.reqwest]
default-features = false
features = ["rustls", "query"]
version = "0.13.2"

[dependencies.secp256k1]
features = [
    "global-context",
    "rand",
    "recovery",
]
version = "0.31.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.228"

[dependencies.sui-crypto]
features = [
    "ed25519",
    "secp256k1",
]
version = "0.2.0"

[dependencies.sui-sdk-types]
features = [
    "serde",
    "hash",
]
version = "0.2.2"

[dev-dependencies]
futures-util = "0.3.32"
rand = "0.10.0"

[dev-dependencies.tokio]
features = ["full"]
version = "1.50.0"

[dev-dependencies.tokio-tungstenite]
features = ["rustls-tls-webpki-roots"]
version = "0.28.0"

[package]
categories = [
    "api-bindings",
    "authentication",
    "cryptography::cryptocurrencies",
    "finance",
]
description = "Software Development Kit for Bluefin Pro"
edition = "2024"
homepage = "https://bluefin.io/"
keywords = [
    "blue",
    "bluefin",
    "sui",
]
license = "Unlicense"
name = "bluefin-pro"
repository = "https://github.com/fireflyprotocol/pro-sdk"
version = "1.13.0"

[workspace]
members = [
    ".",
    "gen/bluefin_api",
]
