optional = true
tls-rustls = ["dep:rustls", "reqwest/rustls-tls-webpki-roots"]
[dependencies]
base64 = "0.22.1"
bcs = "0.1.6"
blake2 = "0.10.6"
chrono = "0.4.44"
hex = "0.4.3"
serde_json = "1.0.149"
sha2 = "0.10.9"

[dependencies.bluefin_api]
path = "gen/bluefin_api"
version = "1.14.0"

[dependencies.ed25519-dalek]
features = ["rand_core"]
version = "2.2.0"

[dependencies.reqwest]
default-features = false
package = "reqwest"
version = "0.12"

[dependencies.rustls]
default-features = false
features = [
    "aws-lc-rs",
    "std",
]
optional = true
version = "0.23"

[dependencies.secp256k1]
features = [
    "global-context",
    "rand",
    "recovery",
]
version = "0.31.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.228"

[dependencies.sui-crypto]
features = [
    "ed25519",
    "secp256k1",
]
version = "0.2.0"

[dependencies.sui-sdk-types]
features = [
    "serde",
    "hash",
]
version = "0.2.2"

[dev-dependencies]
futures-util = "0.3.32"
rand = "0.8.5"

[dev-dependencies.tokio]
features = ["full"]
version = "1.50.0"

[dev-dependencies.tokio-tungstenite]
features = ["rustls-tls-webpki-roots"]
version = "0.24.0"

[features]
default = ["tls-native-tls"]
tls-native-tls = ["reqwest/native-tls"]
tls-rustls = [
    "dep:rustls",
    "reqwest/rustls-tls-webpki-roots",
]

[package]
categories = [
    "api-bindings",
    "authentication",
    "cryptography::cryptocurrencies",
    "finance",
]
description = "Software Development Kit for Bluefin Pro"
edition = "2024"
homepage = "https://bluefin.io/"
keywords = [
    "blue",
    "bluefin",
    "sui",
]
license = "Unlicense"
name = "bluefin-pro"
repository = "https://github.com/fireflyprotocol/pro-sdk"
version = "1.14.0"

[workspace]
members = [
    ".",
    "gen/bluefin_api",
]
