[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[features]
default = ["version-bump"]
version-bump = [
    "dep:semver",
    "dep:sha2",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:toml",
    "dep:chrono",
]

[dependencies]
semver = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
tempfile = "3"
toml = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
serial_test = "3"
