[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bluefin_pro_sdk"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
requires-python = ">=3.9.2,<3.13.0"
authors = [
    { name = "Bluefin Pro SDK", email = "audreyr@example.com" }
]
maintainers = [
    { name = "Bluefin Pro SDK", email = "audreyr@example.com" }
]
classifiers = [

]
license = { text = "Not open source" }
dependencies = [
    "cryptography (>=44.0.0,<45.0.0)",
    "bip-utils (>=2.9.3,<3.0.0)",
    "websockets (>=14.1,<15.0)",
    "urllib3 >= 1.25.3, < 3.0.0",
    "python-dateutil >= 2.8.2",
    "aiohttp >= 3.8.4",
    "aiohttp-retry >= 2.8.3",
    "pydantic >= 2",
    "typing-extensions >= 4.7.1",
    "requests (>=2.32.3,<3.0.0)"
]

[project.optional-dependencies]
dev = [
    "coverage", # testing
    "mypy", # linting
    "pytest", # testing
    "ruff",  # linting
    "pytest-asyncio"
]

[project.urls]

bugs = "https://github.com/audreyr/bluefin_pro_sdk/issues"
changelog = "https://github.com/audreyr/bluefin_pro_sdk/blob/master/changelog.md"
homepage = "https://github.com/audreyr/bluefin_pro_sdk"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"