[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
classifiers = []
dependencies = [
    "cryptography (>=44.0.0,<45.0.0)",
    "bip-utils (>=2.9.3,<3.0.0)",
    "websockets (>=14.1,<15.0)",
    "urllib3 >= 1.25.3, < 3.0.0",
    "python-dateutil >= 2.8.2",
    "aiohttp >= 3.8.4",
    "aiohttp-retry >= 2.8.3",
    "pydantic >= 2",
    "typing-extensions >= 4.7.1",
    "requests (>=2.32.3,<3.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
]
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
name = "bluefin_pro_sdk"
readme = "README.rst"
requires-python = ">=3.9.2,<3.13.0"
version = "1.4.0"

[[project.authors]]
email = "audreyr@example.com"
name = "Bluefin Pro SDK"

[project.license]
text = "Not open source"

[[project.maintainers]]
email = "audreyr@example.com"
name = "Bluefin Pro SDK"

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff",
    "pytest-asyncio",
]

[project.urls]
bugs = "https://github.com/audreyr/bluefin_pro_sdk/issues"
changelog = "https://github.com/audreyr/bluefin_pro_sdk/blob/master/changelog.md"
homepage = "https://github.com/audreyr/bluefin_pro_sdk"

[tool.mypy]
files = "."
strict = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
allow_untyped_defs = true
disable_error_code = "attr-defined"
module = "tests.*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.package-dir]
"" = "src"
